fixed gigantic sidebar images on mobile

--- a/assets/styles/template-parts/_sidebar.scss
+++ b/assets/styles/template-parts/_sidebar.scss
@@ -39,9 +39,10 @@
       display: flex;
       flex-direction: row;
       height: 100%;
+      overflow: hidden;
         img {
           min-height: 5em;
-          max-height: 10em;
+          max-height: 8em;
           width: 25%;
           object-fit: cover;
           border-bottom-right-radius: 4px;
